--- a/package.json
+++ b/package.json
@@ -16,13 +16,20 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
+    "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
     "next": "13.5.3",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwindcss-textshadow": "^2.1.3"
   }
 }
